#86: rename worksShifts to worksShiftTypes